<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clientes"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/standart_padding"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/tv_entran"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_entran"
            android:textSize="@dimen/size_text"
            android:textColor="@color/text_negro"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_salen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_salen"
            android:textSize="@dimen/size_text"
            android:textColor="@color/text_negro"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/num_entran"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num_inicial"
            android:textColor="@color/text_negro"
            android:textSize="@dimen/size_numero"
            android:layout_margin="@dimen/standart_padding"/>

        <TextView
            android:id="@+id/num_salen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num_inicial"
            android:textColor="@color/text_negro"
            android:textSize="@dimen/size_numero"
            android:layout_margin="@dimen/standart_padding"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/entran"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/bt_add"
            android:textSize="@dimen/text_title"
            android:background="#A9F5A9"
            android:layout_margin="@dimen/standart_padding"/>

        <Button
            android:id="@+id/salen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/bt_add"
            android:textSize="@dimen/text_title"
            android:background="#F8E0E6"
            android:layout_margin="@dimen/standart_padding"/>
    </LinearLayout>
</LinearLayout>